k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: chat-app
spec:
  selector:
       app: backend
  ports:
    -  port: 5001
       targetPort: 5001
